--- a/yaml/chacha.yaml
+++ b/yaml/chacha.yaml
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: CC0-1.0
 
-algorithmId: chacha(salsa)
-algorithmName:
+algorithmId: chacha
+algorithmName: ChaCha Stream Cipher
 securityStrength: '256'
